# robot_learning_ws

./: .gitignore  README.md
artifacts/week2_tf/: week2_inspection_pose.yaml  week2_tf_tree.gv  week2_zero_pose.yaml
docs/: frame_convention.md  node_graph.md  third_party_sources.md  week1_review.md  week2_model_acceptance.md  week2_ur5e_reference.md
scripts/: ros_jazzy_env.sh  verify_week2_model.py
src/learning_robot_bringup/: package.xml  setup.cfg  setup.py
src/learning_robot_bringup/config/: debug.yaml  normal.yaml
src/learning_robot_bringup/launch/: bringup.launch.py
src/learning_robot_bringup/learning_robot_bringup/: execute_pick_action_server.py  health_check.py  joint_state_mock_publisher.py  pick_failure_codes.py  pick_task_client.py  pose_query_service.py  tf_probe_node.py
src/learning_robot_control/: CMakeLists.txt  package.xml
src/learning_robot_control/config/: controllers.yaml
src/learning_robot_control/launch/: fake_hardware.launch.py
src/learning_robot_control/urdf/: ros2_control.xacro
src/learning_robot_description/: CMakeLists.txt  package.xml
src/learning_robot_description/config/ur5e/: visual_parameters.yaml
src/learning_robot_description/launch/: display_model.launch.py
src/learning_robot_description/rviz/: learning_ur5e.rviz
src/learning_robot_description/urdf/: arm_macro.xacro  gripper_macro.xacro  robot.urdf.xacro  robot_with_gripper_camera.urdf.xacro  tool_camera_macro.xacro  ur_macro.xacro
src/learning_robot_interfaces/: CMakeLists.txt  package.xml
src/learning_robot_interfaces/action/: ExecutePick.action
src/learning_robot_interfaces/srv/: QueryObjectPose.srv
