<?xml version="1.0"?>
<package format="3">
  <name>learning_robot_control</name>
  <version>0.0.0</version>

  <description>
    ros2_control, Fake Hardware and controller configuration for the ROS2 learning robot.
  </description>

  <maintainer email="15935140069@163.com">renyinjie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>learning_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
