<?xml version="1.0"?>
<package format="3">
  <name>learning_robot_description</name>
  <version>0.0.0</version>
  <description>
    Robot description package for the ROS2 learning project.
  </description>

  <maintainer email="15935140069@163.com">renyinjie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>